--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" id='logo' href="index.html">Foodie</a><span>for the soul</span>
+                <a class="navbar-brand" id='logo' href="index.html">Foodie</a><span><a href='food.html'>check us out</a></span>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -139,75 +139,191 @@
         </div>
     </div>
 	
-	<div class="content-say">
+	<div class="content-slide">
 		<div class="container">
             <div class="row">
-                <div class="col-md-offset-3 col-md-3">
-					<div class="say-heading">
-						<img src='images/img1_small.jpg' srcset='images/img1_small.jpg 400w ,images/img1_large.jpg 800w' sizes='(max-width: 400px) 50%, 25%' alt='NES Console'></img>
+                <div class="col-md-offset-2 col-md-4">
+					<div class="say-left">
+						<img src='img/snacks.svg' alt='snacks'></img>
 						<p>With a graze subscription you’ll get access to all the latest creations, straight from our kitchen. Fancy trying our most loved snacks?</p>
 						<button>Get Started</button>
 						<span class="subheading">Have a code?<a class="button" href="#popup1"><u>Enter it here</u></a></span>
 					</div>
 				</div>
-				<div class="col-md-offset-3 col-md-3">
-					<div class="carousel-inner">
-						<div class="item active">
-							<image></image>
-						</div>
-						<div class="item">
-							<image></image>
-						</div>
-						<div class="item">
-							<image></image>
-						</div>
-						<div class="item">
-							<image></image>
+				<div class="col-md-4">
+					<div class='say-right'>
+						<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+					
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+								<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+								<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+								<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+							</ol>
+
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<div class="item active">
+									<img src="img/carousel/snacks-pecan.jpg" alt="pecan">
+									<div class="carousel-caption">
+									</div>
+								</div>
+								<div class="item">
+									<img src="img/carousel/snacks-pretzel.jpg" alt="pretzel">
+									<div class="carousel-caption">
+									</div>
+								</div>
+								<div class="item">
+									<img src="img/carousel/snacks-smoothie.jpg" alt="smoothie">
+									<div class="carousel-caption">
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
+				</div>	
             </div>
 		</div>
 	</div>
+	
+	<div class="content-say">
+		<div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h3 class="section-heading">What people say</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <img src='img/about-bg.jpg' width='100%'></img>
+                </div>
+			</div>
+			<div class="row text-center">
+                <div class="col-md-12" id='feature'>
+                    <span>Also featured in</span>
+                </div>
+			</div>
+			<div class="row text-center" id='say-logo'>
+                <div class="col-md-offset-1 col-md-2">
+					<img src="img/cnbc.png" alt="cnbc"></img>
+                </div>
+                <div class="col-md-2">
+					<img src="img/cnbc.png" alt="cnbc"></img>
+                </div>
+				<div class="col-md-2">
+					<img src="img/cnbc.png" alt="cnbc"></img>
+                </div>
+				<div class="col-md-2">
+					<img src="img/cnbc.png" alt="cnbc"></img>
+                </div>
+				<div class="col-md-2">
+					<img src="img/cnbc.png" alt="cnbc"></img>
+                </div>
+            </div>
+        </div>
+    </div>
 
-		<hr>
+	<div class="content-ready" style="background-image: url('img/forestflare.jpg')">
+		<div class="container">
+            <div class="row text-center">
+                <div class="col-md-12 text-center">
+                    <h2 class="ready-heading">Ready to order?</h2>
+                </div>
+            </div>
+			<div class="row text-center"> 
+				<div class="ready-button">
+					<h2 class='btn'>Order with us</h2>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="ready-promo">
+					<span class="subheading">Have a promotional code?<a class="button" href="#popup1"><u>Enter it here</u></a></span>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="ready-logo">
+					<div class="col-md-10 col-md-offset-1">
+						<ul class="list-inline text-center">
+							<li>
+								<a href="#">
+									<span class="fa-stack fa-lg">
+										<i class="fa fa-circle fa-stack-2x"></i>
+										<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+									</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="fa-stack fa-lg">
+										<i class="fa fa-circle fa-stack-2x"></i>
+										<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+									</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<span class="fa-stack fa-lg">
+										<i class="fa fa-circle fa-stack-2x"></i>
+										<i class="fa fa-github fa-stack-1x fa-inverse"></i>
+									</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+        </div>
+    </div>
 	
 	</div>
     <!-- Footer -->
     <footer>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </div>
+            <div class="row footer-top">
+				<div class='col-md-offset-1 col-md-4'>
+					<ul>
+						<li>
+							© 2015 all rights reserved
+						</li>
+						<li>
+							<a href="#">terms</a>
+						</li>
+						<li>
+							<a href="#">privacy</a>
+						</li>
+						<li>
+							<a href="#">about</a>
+						</li>
+						<li>
+							<a href="#">jobs</a>
+						</li>
+					</ul>
+				</div>
+				<div class='col-md-2'>
+				</div>
+				<div class='col-md-4'>
+					<ul>
+						<li>
+							<a href="#">how it works</a>
+						</li>
+						<li>
+							<a href="#">faqs</a>
+						</li>
+						<li>
+							<a href="#">health</a>
+						</li>
+						<li>
+							<a href="#">gifts</a>
+						</li>
+						<li>
+							<a href="">wholesale</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="footer-bottom">
+		</div>
     </footer>
 
     <!-- jQuery -->
