--- a/order.html
+++ b/order.html
@@ -56,7 +56,7 @@
                         <a href="wholesale.html">Wholesale</a>
                     </li>
                     <li>
-                        <a href="post.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="order.html">Place your first order</a>
@@ -75,56 +75,153 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>This is what we are about since our inception.</h1>
+                        <h1>About Me</h1>
+                        <hr class="small">
+                        <span class="subheading">This is what I do.</span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-	
-	<!-- Main Content -->
-    <div id="content">
-		<div class="content-story">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-offset-1 col-md-10">
-						<h2 class='text-center'>Our story</h2>
-						<hr class="small">
-						<p>It all started back in 2002, when Sean Kelly was at the gym in the Upper West Side of New York City. He saw a woman get off a treadmill, order a Coke from the nearby vending machine, and hop back on the treadmill. That spawned the launch of HUMAN (Helping Unite Mankind And Nutrition), which pioneered healthy food distribution via healthy vending machines.</p>
-						<p>Fast forward to 2013: After having placed thousands of healthy vending machines across the country, earning an Inc. 500 Fastest Growing Company ranking (#168), and positively influencing millions of snacking decisions, Sean and his co-founder, Andy Mackensen, saw an incredible and growing need for healthy snack delivery in offices.</p>
-						<p>SnackNation launched in 2013, to address the huge demand for healthy snacks in the workplace and an increasing focus on employee engagement, health, and wellbeing. Having convenient healthy snacks at work just makes sense!</p>
-						<p>Since our founding, we’ve delivered millions of healthy snacks across the Nation, and we owe a huge thanks to our loyal customers and community for joining us on this journey of helping people eat more healthily. We hope that you’ll continue to be a part of our story.</p>
+
+    <!-- Main Content -->
+    <div class="form">
+	<div class='container'>
+		<div class='formBlock1 col-md-offset-2 col-md-8 col-md-offset-2'>
+			<div class='row'>
+				<h3><b>Thank you for shopping with us!</b></h3>'
+				<div class='col-md-6 formBlock1-div'>
+					<label for='name' class='form-group'>
+						<span>Please enter your name:<span>
+						<input id='name' type='text' max='30' placeholder='Johnathan' autofocus required autocomplete='a_name'>
+					</label>
+					<label for='email' class='form-group'> Would you like to receive promotions from us?
+						<input id='email' type='text' max='30' placeholder='something@gmail.com' autocomplete='a_email'>
+					</label>
+				</div>
+				<div class='col-md-offset-3 col-md-3 formBlock1-div' style='text-align: center'>
+					<img src='images/img1_small.jpg' srcset='images/img1_small.jpg 400w ,images/img1_large.jpg 800w' sizes='(max-width: 400px) 50%, 25%' alt='NES Console'></img>
+				</div>
+			</div>
+			<hr></hr>
+			<div class='col-md-6 formBlock1-div'>
+				<label for='address' class='form-group'>
+					<span>Please enter your address:</span>
+					<input id='address' type='text' max='30' placeholder='1330 Amber Lane' required autocomplete='a_address'> 
+				</label>
+				<label for='state' class='form-group'>
+					<span>What is the state?</span>
+					<select id='state' name='blah' required autocomplete='a_state'> 
+						<option>Georgia</option>
+						<option>Florida</option>
+						<option>California</option>
+						<option>Texas</option>
+						<option>Arkansas</option>
+						<option>Delaware</option>
+						<option>New York</option>
+						<option>Illinois</option>
+						<option>Virginia</option>
+						<option>Tennessee</option>
+					</select>
+				</label>
+			</div>
+			<div class='col-md-6 formBlock1-div'>
+				<label for='city' class='form-group'>
+					<span>What city do you live in?</span>
+					<input id='city' type='text' max='20' placeholder='Cleveland' required autocomplete='a_city'> 
+				</label>
+				<label for='area_code' class='form-group'>
+					<span>What is the area code?</span>
+					<input id='area_code' type='text' max='5' placeholder='30011' required autocomplete='a_area_code'> 
+				</label>
+			</div>
+		</div>
+	</div>
+
+		<div class='container'>
+			<div class='formBlock2 col-md-offset-2 col-md-8 col-md-offset-2'>
+				<h3><b>Billing Information</b></h3>
+				<div class='row'>
+					<div class='col-md-6 formBlock2-div'>
+						<label for='cc' class='form-group'>
+							<span>What is your Credit Card Number?</span>
+							<input id='cc' type='text' max='15' placeholder='33829292928928' required autocomplete='a_cc'> 
+						</label>
+					</div>
+					<div class='col-md-6'>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='col-md-3 nopadding'>
+						<label for='area_code' class='form-group'>
+							<span>The Expiration Date?</span>
+							<input id='exp_date' type='month' placeholder='30011' required autocomplete='a_date'> 
+						</label>
+					</div>
+					<div class='col-md-3'>
+						<label for='cvv' class='form-group'>
+							<span>What is the CVV?</span>
+							<input id='cvv' type='text' max='3' placeholder='920' required autocomplete='a_cvv'> 
+						</label>
+					</div>
+					<div class='col-md-6'>
+						<label for='check' class='form-group'>
+							<span>Different shipping address from billing?</span>
+							<input id='check' type='checkbox'> 
+						</label>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='col-md-12'>
+						<label for='submit' class='form-group'>
+							<input id='submit' type='submit' value='submit'> 
+						</label>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class='content-phil'>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-offset-1 col-md-10">
-						<h2 class='text-center'>Where we give back</h2>
-						<hr class="small">
-						<p>Fast forward to 2013: After having placed thousands of healthy vending machines across the country, earning an Inc. 500 Fastest Growing Company ranking (#168), and positively influencing millions of snacking decisions, Sean and his co-founder, Andy Mackensen, saw an incredible and growing need for healthy snack delivery in offices.</p>
-					</div>
-				</div>
+		
+		<div class='container'>
+			<div class='formBlock3 col-md-offset-2 col-md-8 col-md-offset-2 hide'>
+				<h3><b>Shipping Information</b></h3>
+					<div class='col-md-6 formBlock3-div'>
+				<label for='address' class='form-group'>
+					<span>Please enter your address:</span>
+					<input id='address' type='text' max='30' placeholder='1330 Amber Lane' required autocomplete='a_address'> 
+				</label>
+				<label for='state' class='form-group'>
+					<span>What is the state?</span>
+					<select id='state' name='blah' required autocomplete='a_state'> 
+						<option>Georgia</option>
+						<option>Florida</option>
+						<option>California</option>
+						<option>Texas</option>
+						<option>Arkansas</option>
+						<option>Delaware</option>
+						<option>New York</option>
+						<option>Illinois</option>
+						<option>Virginia</option>
+						<option>Tennessee</option>
+					</select>
+				</label>
 			</div>
-		</div>
-		<div class='content-values'>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-offset-1 col-md-10">
-						<h2 class='text-center'>Our values</h2>
-						<hr class="small">
-						<p>Fast forward to 2013: After having placed thousands of healthy vending machines across the country, earning an Inc. 500 Fastest Growing Company ranking (#168), and positively influencing millions of snacking decisions, Sean and his co-founder, Andy Mackensen, saw an incredible and growing need for healthy snack delivery in offices.</p>
-					</div>
+				<div class='col-md-6 formBlock3-div'>
+					<label for='city' class='form-group'>
+						<span>What city do you live in?</span>
+						<input id='city' type='text' max='20' placeholder='Cleveland' required autocomplete='a_city'> 
+					</label>
+					<label for='area_code' class='form-group'>
+						<span>What is the area code?</span>
+						<input id='area_code' type='text' max='5' placeholder='30011' required autocomplete='a_area_code'> 
+					</label>
 				</div>
 			</div>
 		</div>
 	</div>
-	
-	
-	<hr>
-	<!-- Footer -->
+
+    <hr>
+
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
