--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                         <a href="index.html">Login</a>
                     </li>
                     <li>
-                        <a href="about.html">Wholesale</a>
+                        <a href="wholesale.html">Wholesale</a>
                     </li>
                     <li>
-                        <a href="post.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="contact.html">Place your first order</a>
+                        <a href="order.html">Place your first order</a>
                     </li>
                 </ul>
             </div>
@@ -333,7 +333,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="js/clean-blog.js"></script>
 
 </body>
 
