--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             </div>
         </div>
     </header>
-	
+
 	<!-- Main Content -->
     <div id="content">
 		<div class="content-story">
@@ -105,6 +105,7 @@
 						<h2 class='text-center'>Where we give back</h2>
 						<hr class="small">
 						<p>Fast forward to 2013: After having placed thousands of healthy vending machines across the country, earning an Inc. 500 Fastest Growing Company ranking (#168), and positively influencing millions of snacking decisions, Sean and his co-founder, Andy Mackensen, saw an incredible and growing need for healthy snack delivery in offices.</p>
+            <p>A new line to add something.</p>
 					</div>
 				</div>
 			</div>
@@ -121,8 +122,8 @@
 			</div>
 		</div>
 	</div>
-	
-	
+
+
 	<hr>
 	<!-- Footer -->
     <footer>
